// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render api-SearchHitItem correctly 1`] = `
<article
  className="search-hit"
>
  <span
    aria-hidden="false"
    className="uu-invisible"
  >
    Søketreff.
  </span>
  <header>
    <SearchHitHeader
      darkThemeBackground={false}
      detialsPage={false}
      externalLink={false}
      nationalComponent={false}
      publisher={
        Object {
          "id": "974760673",
          "name": "REGISTERENHETEN I BRØNNØYSUND",
          "orgPath": "/STAT/912660680/974760673",
          "prefLabel": Object {
            "no": "Brønnøysundregistrene",
          },
          "uri": "http://data.brreg.no/enhetsregisteret/enhet/974760673",
        }
      }
      publisherItems={null}
      publisherLabel="Provider:"
      publisherTag="span"
      referenceData={null}
      statusCode={null}
      tag="h2"
      theme={Array []}
      title="REST-API for Kontakt- og reserversjonsregisteret (KRR)"
      titleLink="/apis/24fa3668-6ada-4a50-804e-1396f8470a24"
    />
  </header>
  <div
    className="fdk-text-size-medium"
  >
    <div
      aria-hidden="false"
      className="uu-invisible"
    >
      Beskrivelse av api
    </div>
    Dette er eit REST-API for å tilby funksjonalitet tilsvarende dagens SOAP-baserte oppslagstjeneste for KRR. ...
  </div>
  <div
    className="mb-2"
  >
    <strong>
      Format
      : 
    </strong>
    <span
      key="0"
    >
      application/json
    </span>
    <span
      key="1"
    >
      , 
      application/jose
    </span>
    <span
      key="2"
    >
      , 
      */*
    </span>
  </div>
  <div
    className="access-icons mt-2 d-flex justify-content-between"
  />
</article>
`;

exports[`should render api-SearchHitItem correctly with no props 1`] = `
<article
  className="search-hit"
>
  <span
    aria-hidden="false"
    className="uu-invisible"
  >
    Søketreff.
  </span>
  <header>
    <SearchHitHeader
      darkThemeBackground={false}
      detialsPage={false}
      externalLink={false}
      nationalComponent={false}
      publisher={null}
      publisherItems={null}
      publisherLabel="Provider:"
      publisherTag="span"
      referenceData={null}
      statusCode={null}
      tag="h2"
      theme={Array []}
      title={null}
      titleLink="/apis/undefined"
    />
  </header>
  <div
    className="access-icons mt-2 d-flex justify-content-between"
  />
</article>
`;

exports[`should render api-SearchHitItem with long description 1`] = `
<article
  className="search-hit"
>
  <span
    aria-hidden="false"
    className="uu-invisible"
  >
    Søketreff.
  </span>
  <header>
    <SearchHitHeader
      darkThemeBackground={false}
      detialsPage={false}
      externalLink={false}
      nationalComponent={false}
      publisher={null}
      publisherItems={null}
      publisherLabel="Provider:"
      publisherTag="span"
      referenceData={null}
      statusCode={null}
      tag="h2"
      theme={Array []}
      title="National Data Directory Search API"
      titleLink="/apis/32690443-e926-4e52-9988-dbac45085102"
    />
  </header>
  <div
    className="fdk-text-size-medium"
  >
    <div
      aria-hidden="false"
      className="uu-invisible"
    >
      Beskrivelse av api
    </div>
    It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, ...
  </div>
  <div
    className="access-icons mt-2 d-flex justify-content-between"
  >
    <span
      className="access-icon flex-fill fdk-color-danger"
    >
      <span
        className="icon2-icon-api-cost"
      >
        <span
          className="path1"
        />
        <span
          className="path2"
        />
      </span>
      Not free
    </span>
    <span
      className="access-icon flex-fill fdk-color-danger"
    >
      <span
        className="icon2-icon-api-access-not-limited"
      >
        <span
          className="path1"
        />
        <span
          className="path2"
        />
      </span>
      Not public access
    </span>
    <span
      className="access-icon flex-fill fdk-color-danger"
    >
      <span
        className="icon2-icon-api-license"
      >
        <span
          className="path1"
        />
        <span
          className="path2"
        />
        <span
          className="path3"
        />
        <span
          className="path4"
        />
        <span
          className="path5"
        />
        <span
          className="path6"
        />
      </span>
      License not open
    </span>
  </div>
</article>
`;
